Update 5-3. NEW FIORI 총정리.md

--- a/RAP/5-3. NEW FIORI 총정리.md
+++ b/RAP/5-3. NEW FIORI 총정리.md
@@ -2426,5 +2426,1042 @@ sap.ui.define([
 
 </br>
 
-# 02/07
+# 02/09
+</br>
+
+## <  핵심 개념 >
+- **1) 조회(GET)는 HTTP 가능, 데이터 변경(Create/Update/Delete)은 HTTPS 필수**
+- **2) sap.ui.model.odata.v2.ODataModel CRUD 메서드**
+- **3) Header–Item 구조 OData 서비스 구현**
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < 추가적인 내용 >
+</br>
+
+- 외부(OData) 호출로 실행되는 DPC_EXT 메소드 디버깅을 위해 External Breakpoint 설정
+- 오른쪽 마우스 클릭으로 설정 가능
+<img width="523" height="323" alt="image" src="https://github.com/user-attachments/assets/26704ad0-f422-4243-8533-f5264f80e8d7" />
+</br>
+</br>
+</br>
+
+- `GET`: FilterOperator.EQ 조건으로 특정 필드 값이 정확히 일치하는 데이터만 조회하는 OData 필터 조건
+<img width="752" height="404" alt="image" src="https://github.com/user-attachments/assets/7fe1ff26-aaf6-4bc6-a118-8e7a29b51ed8" />
+</br>
+</br>
+</br>
+
+- `sap.ui.model.odata.v2.ODataModel` 로 검색하면 OData CRUD(Create/Read/Update/Delete) 메소드들을 한 번에 확인할 수 있음
+<img width="614" height="347" alt="image" src="https://github.com/user-attachments/assets/ce95e16e-be58-4fc0-b8e5-290b2d333fbe" />
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < sap.ui.model.odata.v2.ODataModel CRUD 메서드 정리 >
+</br>
+
+### 1) Create
+- `ZCL_ZCODE_PERSON2_MPC=>TS_PERSON` : 화면에서 보내는 Person 데이터 구조
+- `io_data_provider->read_entry_data` : 화면 입력값을 ABAP 변수로 읽어옴
+- `er_entity` : 저장 결과를 화면으로 다시 전달
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_CREATE_ENTITY
+
+  method EMPLOYEESET_CREATE_ENTITY.
+* POST 요청을 통해 실제 DB TABLE에 데이터를 추가하는 과정
+* BODY 에 담긴 생성 데이터를 io_data_provider를 통해 가져옴
+* DB Table에 Insert 후, 처리 결과를 ER_ENTITY로 전달
+
+    " Entity 구조(UI5 ↔ OData 통신용)와 DB 테이블 구조 분리
+    DATA: ls_entity TYPE ZCL_ZGWEMP_B03_MPC=>ts_employee,
+          ls_data TYPE ztempinfo_b03.
+
+    " es_data에 Request Body(JSON) 정보가 들어옴
+    io_data_provider->read_entry_data( IMPORTING es_data = ls_entity ).
+    CHECK sy-subrc = 0.
+    MOVE-CORRESPONDING ls_entity TO ls_data.
+
+* 실제 DB에 추가하기 전, 데이터 작업 가능
+    ls_data-memo = '이건 메모야~~'.
+    INSERT ztempinfo_b03 FROM ls_data.
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_entity TO er_entity.
+    ENDIF.
+  endmethod.
+```
+- SAP Gateway Client에서 POST(Create) 요청으로 JSON 데이터를 보내고, DB에 저장된 결과가 OData 응답으로 그대로 반환되는 화면
+- 조회(GET)는 HTTP 가능, 데이터 변경(Create/Update/Delete)은 HTTPS 필수
+<img width="632" height="366" alt="image" src="https://github.com/user-attachments/assets/cf01e657-90d9-49c0-a80f-11526fff16d4" />
+</br>
+</br>
+</br>
+</br>
+
+### 2) Update
+- `ZCL_ZCODE_PERSON2_MPC=>TS_PERSON` : 화면에서 보내는 Person 데이터 구조
+- `UPDATE_ENTITY` 는 응답으로 데이터를 돌려줄 필요가 없어서 `er_entity` 가 없어도 정상임
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_UPDATE_ENTITY
+
+  METHOD employeeset_update_entity.
+* PUT 요청을 통해서 실제 테이블에 데이터를 변경하는 과정
+* BODY에 담긴 변경 대상 데이터를 io_data_provider로 얻어옴
+* DB Update를 진행
+
+    DATA: ls_entity TYPE zcl_zgwemp_b03_mpc=>ts_employee,
+          ls_data   TYPE ztempinfo_b03.
+    io_data_provider->read_entry_data( IMPORTING es_data = ls_entity ).
+
+    SELECT SINGLE * FROM ztempinfo_b03
+      INTO ls_data
+      WHERE empno = ls_entity-empno
+        AND projod = ls_entity-projod.
+    IF sy-subrc = 0.
+      " 만약, 별도의 DATA 세팅이 필요한 경우 여기서 ㅈ가성
+      " LS_DATA-MEMO = '이건 변경이야'.
+      ls_data-memo = ls_entity-memo.
+      ls_data-assigndate = ls_entity-assigndate.
+      ls_data-role = ls_entity-role.
+      UPDATE ztempinfo_b03 FROM ls_data.
+    ENDIF.
+  ENDMETHOD.
+```
+- SAP Gateway Client에서 PUT(UPDATE) 요청으로 특정 Entity를 수정하고, UPDATE_ENTITY가 실행되어 DB 데이터가 변경되는 테스트 화면
+<img width="623" height="347" alt="image" src="https://github.com/user-attachments/assets/337c1a2b-df31-458c-bd93-936a54d8ad50" />
+</br>
+</br>
+</br>
+</br>
+
+### 3) Delete
+- DELETE 요청 시 URL로 전달된 키 값(`it_key_tab`)을 DB 구조에 매핑하여 해당 레코드를 테이블에서 삭제
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_DELETE_ENTITY
+
+  METHOD employeeset_delete_entity.
+    " Delete 요청을 통해서 실제 테이블 데이터를 삭제
+    " IT_KEY_TAB 파라미터에 들어온 값을 갖고
+    " 해당되는 데이터를 DB Table에서 삭제
+
+    " 1. DB 테이블과 동일한 구조의 변수 선언
+    " 2. IT_KEY_TAB 파라미터에 들어온 값으로 변수에 키 값 세팅
+    " 3. 변수에 해당되는 레코드를 DB Table에서 삭제
+    "    delete <db tab> FROM <structure>
+
+    " 실제 테스트.Body 없이 HTTP Method, URL만 구성
+    " => /EntitySet(key1='값',key2='값')
+
+    DATA: ls_data TYPE ztempinfo_b03.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      ls_data-(ls_key-name) = ls_key-value.
+*      CASE ls_key-name.
+*        WHEN 'Empno'.
+*          ls_data-empno = ls_key-value.
+*        WHEN 'Projod'.
+*          ls_data-projod = ls_key-value.
+*        WHEN OTHERS.
+*      ENDCASE.
+    ENDLOOP.
+
+    DELETE ztempinfo_b03 FROM ls_data.
+  ENDMETHOD.
+```
+- SAP Gateway Client에서 DELETE 요청으로 특정 Entity를 삭제하면 DELETE_ENTITY가 실행되어 DB 데이터가 삭제됨을 확인하는 테스트 화면
+<img width="673" height="334" alt="image" src="https://github.com/user-attachments/assets/c0f25fe0-313c-4425-bc91-dbecd49e9777" />
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < Header–Item 구조 OData 서비스 구현 >
+</br>
+
+**1) DDIC 구조 기반 Header / Item Entity 생성**
+- ABAP DDIC 구조(Header, Item)를 Import하여 OData Entity Type과 EntitySet을 생성
+  
+<img width="676" height="361" alt="image" src="https://github.com/user-attachments/assets/6e0c39cb-4d8b-4d1b-8091-fc447b0ec3fe" />
+
+<img width="683" height="365" alt="image" src="https://github.com/user-attachments/assets/d61fe763-f994-494c-ae52-ce3cd4c6e1b5" />
+</br>
+</br>
+</br>
+</br>
+
+**2) Header–Item Association 생성 (1:N 관계 설정)**
+- Header와 Item Entity를 Carrid 키로 연결하여 1:N 관계의 Association 및 Navigation Property를 생성
+
+<img width="323" height="249" alt="image" src="https://github.com/user-attachments/assets/11a4a940-063d-4caf-86c3-1f4fb444fdb5" />
+
+<img width="252" height="251" alt="image" src="https://github.com/user-attachments/assets/79aa0ff0-dab8-41cc-94eb-ec0aa9cf84c2" />
+
+<img width="760" height="239" alt="image" src="https://github.com/user-attachments/assets/6ef6fafb-2dde-46da-8886-de483c25efb6" />
+
+<img width="694" height="96" alt="image" src="https://github.com/user-attachments/assets/0614ec84-189e-4575-92c7-e25ce10060f9" />
+
+<img width="711" height="135" alt="image" src="https://github.com/user-attachments/assets/4db70a20-18a5-4a78-bccd-8c4b1fbe1578" />
+
+<img width="720" height="75" alt="image" src="https://github.com/user-attachments/assets/b07d1492-8d61-4cb7-a67b-b985b5b081cb" />
+</br>
+</br>
+</br>
+</br>
+
+**3) Header–Item OData 서비스 클래스 생성 및 서비스 활성화**
+- Header–Item 모델을 기반으로 MPC/DPC 클래스를 생성하고, OData 서비스를 등록·활성화하여 외부에서 호출 가능하도록 설정
+
+<img width="516" height="406" alt="image" src="https://github.com/user-attachments/assets/907562da-2d0f-4ffe-afff-0d1ee717a557" />
+
+<img width="853" height="426" alt="image" src="https://github.com/user-attachments/assets/2e217943-5f49-4b69-afd2-c9444bd0cb91" />
+</br>
+</br>
+</br>
+</br>
+
+**4) $expand를 이용한 Header–Item 연계 조회 테스트**
+- SAP Gateway Client에서 HeaderSet 조회 시 `$expand=ItemSet` 을 사용해 Header와 하위 Item 데이터를 한 번에 조회
+```html
+/HeaderSet?$format=json&$expand=ItemSet
+```
+<img width="804" height="461" alt="image" src="https://github.com/user-attachments/assets/d7a6770b-ede9-43d1-be5c-3aceacca7f16" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1 : SAP OData 서비스를 이용해 Employee 데이터를 조회·생성·수정·삭제(CRUD)
+- CRUD 구현 실습
+- FilterBar로 조건 조회, 테이블에서 선택한 데이터를 Create/Update 다이얼로그로 처리, OData CRUD 실습
+</br>
+</br>
+
+**1) SAP GUI 코드**
+- GET_ENTITYSET
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_GET_ENTITYSET
+
+  method EMPLOYEESET_GET_ENTITYSET.
+    DATA: lv_where_clause TYPE string.
+        " 전체 필터 조건을 SQL WHERE 절 문자열로 변환
+        lv_where_clause = io_tech_request_context->get_osql_where_clause( ).
+        SELECT * FROM ztempinfo_b03
+          INTO CORRESPONDING FIELDS OF TABLE et_entityset
+          WHERE (lv_where_clause).
+*    DATA: lr_memo TYPE /IWBEP/T_COD_SELECT_OPTIONS,
+*          lr_role TYPE /IWBEP/T_COD_SELECT_OPTIONS,
+*          lr_projod TYPE /IWBEP/T_COD_SELECT_OPTIONS,
+*          lr_date TYPE /IWBEP/T_COD_SELECT_OPTIONS.
+*
+*    IF it_filter_select_options IS INITIAL.
+*      SELECT * FROM ztempinfo_b03
+*        INTO CORRESPONDING FIELDS OF TABLE et_entityset.
+*    ELSE.
+*      " 만약 필터 정보가 들어왔다면, 필터 적용
+*      LOOP AT it_filter_select_options INTO DATA(ls_filter).
+*        CASE ls_filter-property.
+*          WHEN 'Memo'.
+*            APPEND LINES OF ls_filter-select_options TO lr_memo.
+*          WHEN 'Role'.
+*            APPEND LINES OF ls_filter-select_options TO lr_role.
+*          WHEN 'Projod'.
+*            APPEND LINES OF ls_filter-select_options TO lr_projod.
+*          WHEN 'Assigndate'.
+*            APPEND LINES OF ls_filter-select_options TO lr_date.
+*          WHEN OTHERS.
+*        ENDCASE.
+*      ENDLOOP.
+*
+*      SELECT * FROM ztempinfo_b03
+*        INTO CORRESPONDING FIELDS OF TABLE et_entityset
+*        WHERE Memo IN lr_memo
+*          AND Role IN lr_role
+*          AND projod IN lr_projod
+*          AND assigndate IN lr_date.
+*    ENDIF.
+**********************************************************************
+*    IF iv_filter_string IS INITIAL.
+*      SELECT * FROM ztempinfo_b03
+*        INTO CORRESPONDING FIELDS OF TABLE et_entityset.
+*    ELSE.
+*      SELECT * FROM ztempinfo_b03
+*        INTO CORRESPONDING FIELDS OF TABLE et_entityset
+*        WHERE (iv_filter_string).
+*    ENDIF.
+  endmethod.
+```
+- GET_ENTITY
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_GET_ENTITY
+
+  method EMPLOYEESET_GET_ENTITY.
+    DATA: ls_data TYPE ztempinfo_b03.
+
+    "/EntitySet(key1='값1',key2='값2')
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      CASE ls_key-name. " 키 프로퍼티의 이름(Entity기준)
+        WHEN 'Empno'.
+          ls_data-empno = ls_key-value.
+        WHEN 'Projod'.
+          ls_data-projod = ls_key-value.
+        WHEN OTHERS.
+      ENDCASE.
+    ENDLOOP.
+
+    SELECT SINGLE * FROM ztempinfo_b03
+      INTO @DATA(ls_result)
+      WHERE empno = @ls_data-empno
+        AND projod = @ls_data-projod.
+
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_result TO er_entity.
+    ENDIF.
+  endmethod.
+```
+- CREATE_ENTITY
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_CREATE_ENTITY
+
+  method EMPLOYEESET_CREATE_ENTITY.
+* POST 요청을 통해 실제 DB TABLE에 데이터를 추가하는 과정
+* BODY 에 담긴 생성 데이터를 io_data_provider를 통해 가져옴
+* DB Table에 Insert 후, 처리 결과를 ER_ENTITY로 전달
+
+    " Entity 구조(UI5 ↔ OData 통신용)와 DB 테이블 구조 분리
+    DATA: ls_entity TYPE ZCL_ZGWEMP_B03_MPC=>ts_employee,
+          ls_data TYPE ztempinfo_b03.
+
+    " es_data에 Request Body(JSON) 정보가 들어옴
+    io_data_provider->read_entry_data( IMPORTING es_data = ls_entity ).
+    CHECK sy-subrc = 0.
+    MOVE-CORRESPONDING ls_entity TO ls_data.
+
+* 실제 DB에 추가하기 전, 데이터 작업 가능
+    ls_data-memo = '이건 메모야~~'.
+    INSERT ztempinfo_b03 FROM ls_data.
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_entity TO er_entity.
+    ENDIF.
+  endmethod.
+```
+- UPDATE_ENTITY
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_UPDATE_ENTITY
+
+  METHOD employeeset_update_entity.
+* PUT 요청을 통해서 실제 테이블에 데이터를 변경하는 과정
+* BODY에 담긴 변경 대상 데이터를 io_data_provider로 얻어옴
+* DB Update를 진행
+
+    DATA: ls_entity TYPE zcl_zgwemp_b03_mpc=>ts_employee,
+          ls_data   TYPE ztempinfo_b03.
+    io_data_provider->read_entry_data( IMPORTING es_data = ls_entity ).
+
+    SELECT SINGLE * FROM ztempinfo_b03
+      INTO ls_data
+      WHERE empno = ls_entity-empno
+        AND projod = ls_entity-projod.
+    IF sy-subrc = 0.
+      " 만약, 별도의 DATA 세팅이 필요한 경우 여기서 ㅈ가성
+      " LS_DATA-MEMO = '이건 변경이야'.
+      ls_data-memo = ls_entity-memo.
+      ls_data-assigndate = ls_entity-assigndate.
+      ls_data-role = ls_entity-role.
+      UPDATE ztempinfo_b03 FROM ls_data.
+    ENDIF.
+  ENDMETHOD.
+```
+- DELETE_ENTITY
+```abap
+" ZCL_ZGWEMP_B03_DPC_EXT : EMPLOYEESET_DELETE_ENTITY
+
+  METHOD employeeset_delete_entity.
+    " Delete 요청을 통해서 실제 테이블 데이터를 삭제
+    " IT_KEY_TAB 파라미터에 들어온 값을 갖고
+    " 해당되는 데이터를 DB Table에서 삭제
+
+    " 1. DB 테이블과 동일한 구조의 변수 선언
+    " 2. IT_KEY_TAB 파라미터에 들어온 값으로 변수에 키 값 세팅
+    " 3. 변수에 해당되는 레코드를 DB Table에서 삭제
+    "    delete <db tab> FROM <structure>
+
+    " 실제 테스트.Body 없이 HTTP Method, URL만 구성
+    " => /EntitySet(key1='값',key2='값')
+
+    DATA: ls_data TYPE ztempinfo_b03.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      ls_data-(ls_key-name) = ls_key-value.
+*      CASE ls_key-name.
+*        WHEN 'Empno'.
+*          ls_data-empno = ls_key-value.
+*        WHEN 'Projod'.
+*          ls_data-projod = ls_key-value.
+*        WHEN OTHERS.
+*      ENDCASE.
+    ENDLOOP.
+
+    DELETE ztempinfo_b03 FROM ls_data.
+  ENDMETHOD.
+```
+</br>
+</br>
+
+**2) Main.controller.js**
+```java
+// assignment1
+
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/Filter",
+    "sap/ui/model/FilterOperator",
+     "sap/ui/model/json/JSONModel",
+     "sap/ui/core/Fragment"
+], (Controller, Filter, FilterOperator, JSONModel, Fragment) => {
+    "use strict";
+
+    return Controller.extend("assignment1.controller.Main", {
+        onInit() {
+            this.oInputModel = new JSONModel();     
+            this.getView().setModel(this.oInputModel, "oInputModel");   
+            this.oDataModel = this.getOwnerComponent().getModel();  
+        },
+        onSearch: function() {
+            let oInput = this.oInputModel.getData();    // 입력값 (필터)
+            let oFilter = [];
+            let oDateFormat = sap.ui.core.format.DateFormat.getInstance({
+                pattern: "yyyyMMdd",
+                UTC: true
+            });
+            let oStartDate = oDateFormat.parse(oInput.Assigndate);
+            let oEndDate = oDateFormat.parse("20260701");
+            oFilter.push(new Filter("Assigndate", FilterOperator.BT, oStartDate, oEndDate));
+            oFilter.push(new Filter("Memo", FilterOperator.EQ, oInput.Memo));
+
+            this.byId("idEmployeeTable").getBinding("items").filter(oFilter);
+        },
+        onSelectionChange: function(oEvent) {
+            // let oData = oEvent.getParameters().listItem.getBindingContext().getObject();    // 선택한 열의 데이터 가져오기
+            // let oModel = new JSONModel(oData);      // 선택한 열의 데이터로 모델 생성 -> 다이얼로그에서 쓰기 위함
+            // let oDialog = sap.ui.getCore().byId("idUpdateDialog");    
+
+            // if(oDialog) {      
+            //     oDialog.setModel(oModel, "oUpdateModel");
+            //     oDialog.open();
+            // }
+            // else {
+            //     Fragment.load({
+            //         name: "assignment1.view.fragment.UpdateDialog",        
+            //         type: "XML",        
+            //         controller: this    
+            //     }).then(function(oDialog) {
+            //         oDialog.setModel(oModel, "oUpdateModel");
+            //         oDialog.open();
+            //     }.bind(this))
+            // }
+        },
+        onCreate: function() {
+            let oModel = new JSONModel();     
+            let oDialog = sap.ui.getCore().byId("idCreateDialog");    
+
+            if(oDialog) {      
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "assignment1.view.fragment.CreateDialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    oDialog.setModel(oModel, "oCreateModel");
+                    oDialog.open();
+                }.bind(this))
+            }
+        },
+        onCreateButton: function() {
+            let oData = sap.ui.getCore().byId("idCreateDialog").getModel("oCreateModel").getData();
+            oData.Assigndate.setMinutes(
+                oData.Assigndate.getMinutes() - oData.Assigndate.getTimezoneOffset()
+            );
+            let oBody = {
+                Empno   : oData.Empno,
+                Projod  : oData.Projod,
+                Assigndate  : oData.Assigndate,
+                Role    : oData.Role,
+                Memo    : oData.Memo
+            }
+            this.oDataModel.create("/EmployeeSet", oBody, {
+                success: function() {
+                    sap.m.MessageToast.show("생성 성공!");
+                },
+                error: function() {
+                    sap.m.MessageToast.show("생성 에러!");
+                }
+            })
+        },
+        onClose2: function(oEvent) {
+            oEvent.getSource().getParent().close();
+        },
+        onUpdate: function() {
+            let oData = this.byId("idEmployeeTable").getSelectedItem().getBindingContext().getObject();    // 선택한 열의 데이터 가져오기
+            let oModel = new JSONModel(oData);      // 선택한 열의 데이터로 모델 생성 -> 다이얼로그에서 쓰기 위함
+            let oDialog = sap.ui.getCore().byId("idUpdateDialog");    
+
+            if(oDialog) {      
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "assignment1.view.fragment.UpdateDialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    oDialog.setModel(oModel, "oUpdateModel");
+                    oDialog.open();
+                }.bind(this))
+            }
+        },
+        onUpdateButton: function() {
+            let oModel = sap.ui.getCore().byId("idUpdateDialog").getModel("oUpdateModel");    // 다이얼로그에서 수정한 데이터 값
+            let oData = oModel.getData();
+
+            oData.Assigndate.setMinutes(
+                oData.Assigndate.getMinutes() - oData.Assigndate.getTimezoneOffset()
+            );
+
+            let sPath = this.oDataModel.createKey("/EmployeeSet", {
+                Empno : oData.Empno,
+                Projod : oData.Projod
+            })
+            this.oDataModel.update(sPath, oData, {
+                success: function() {
+                    sap.m.MessageToast.show("수정 성공!");
+                    this.oDataModel.refresh();
+                }.bind(this),
+                error: function() {
+                    sap.m.MessageToast.show("수정 에러!");
+                }
+            })
+        },
+        onClose: function(oEvent) {
+            oEvent.getSource().getParent().close();
+        },
+        onDelete: function() {
+            let oData = this.byId("idEmployeeTable").getSelectedItem().getBindingContext().getObject(); 
+            let sPath = this.oDataModel.createKey("/EmployeeSet", {
+                Empno: oData.Empno,
+                Projod : oData.Projod
+            });
+            this.oDataModel.remove(sPath);
+            sap.m.MessageToast.show("삭제 성공!");
+        }
+    });
+});
+```
+</br>
+</br>
+
+**3) Main.view.xml**
+```html
+// assignment1
+
+<mvc:View controllerName="assignment1.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:f="sap.f"
+    xmlns:layout="sap.ui.layout"
+    xmlns:fb="sap.ui.comp.filterbar"
+    xmlns="sap.m">
+    <f:DynamicPage id="dynamicPageId" headerExpanded="true" toggleHeaderOnTitleClick="false">
+        <!-- DynamicPage Title -->
+        <f:title>
+            <f:DynamicPageTitle>
+                <f:heading>
+                    <Title text="Header Title"/>
+                </f:heading>
+                <!-- <f:content>
+                    <OverflowToolbar>
+                    </OverflowToolbar>
+                </f:content> -->
+            </f:DynamicPageTitle>
+        </f:title>
+        <!-- DynamicPage Header -->
+        <f:header>
+            <f:DynamicPageHeader pinnable="false">
+                <fb:FilterBar id="filterbar" search="onSearch" persistencyKey="myPersKey" useToolbar="false" showGoOnFB="true" showFilterConfiguration="false">
+                    <fb:filterGroupItems>
+                        <fb:FilterGroupItem name="Assigndate" groupName="Group1" label="Assign Date" visibleInFilterBar="true">
+                            <fb:control>
+                                <DatePicker value="{oInputModel>/Assigndate}" />
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <fb:FilterGroupItem name="Memo" groupName="Group1" label="Memo" visibleInFilterBar="true">
+                            <fb:control>
+                                <Input value="{oInputModel>/Memo}"/>
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <!-- <fb:FilterGroupItem name="Search" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <Button text="검색버튼" press="onPress" />
+                            </fb:control>
+                        </fb:FilterGroupItem> -->
+                    </fb:filterGroupItems>
+                </fb:FilterBar>
+            </f:DynamicPageHeader>
+        </f:header>
+        <f:content>
+            <Table id="idEmployeeTable"
+                    sticky="HeaderToolbar,ColumnHeaders"
+                    inset="false"
+                    items="{/EmployeeSet}"
+                    selectionChange="onSelectionChange"
+                    class="sapFDynamicPageAlignContent"
+                    mode="SingleSelectLeft"
+                    width="auto">
+                <headerToolbar>
+                    <Toolbar>
+                        <Title text="Products" level="H2"/>
+                        <Button text="생성" press="onCreate"/>
+                        <Button text="수정" press="onUpdate"/>
+                        <Button text="삭제" press="onDelete"/>
+                    </Toolbar>
+                </headerToolbar>
+                <columns>
+                    <Column width="12em">
+                        <Text text="Empno" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Projod" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Assigndate" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Role" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Memo" />
+                    </Column>
+                </columns>
+                <items>
+                    <ColumnListItem>
+                        <cells>
+                            <Text text="{Empno}" />
+                            <Text text="{Projod}" />
+                            <Text text="{
+                                path: 'Assigndate',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
+                            <Text text="{Role}" />
+                            <Text text="{Memo}" />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+        </f:content>
+    </f:DynamicPage>
+</mvc:View>
+```
+</br>
+</br>
+
+**4) CreateDialog.fragment.xml**
+```html
+// assignment1
+
+<c:FragmentDefinition 
+    xmlns="sap.m" 
+    xmlns:f="sap.ui.layout.form"
+    xmlns:c="sap.ui.core">
+    <Dialog id="idCreateDialog"
+            title="Create Dialog"
+            contentHeight="50%"
+            contentWidth="20%">
+        <content>
+            <f:SimpleForm
+                layout="ColumnLayout"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1">
+                <f:content>
+                    <Label text="Empno"/>
+                    <Input value="{oCreateModel>/Empno}" />
+                    <Label text="Projod"/>
+                    <Input value="{oCreateModel>/Projod}" />
+                    <Label text="Assign date"/>
+                    <DatePicker
+                        dateValue="{oCreateModel>/Assigndate}"
+                        displayFormat="yyyy-MM-dd"
+                    />
+                    <Label text="Role"/>
+                    <Input value="{oCreateModel>/Role}" />
+                    <Label text="Memo"/>
+                    <Input value="{oCreateModel>/Memo}" />
+                </f:content>
+            </f:SimpleForm>
+        </content>
+        <buttons>
+            <Button text="생성" press=".onCreateButton" />
+            <Button text="닫기" press=".onClose2" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
+```
+</br>
+</br>
+
+**5) UpdateDialog.fragment.xml**
+```html
+// assignment1
+
+<c:FragmentDefinition 
+    xmlns="sap.m" 
+    xmlns:f="sap.ui.layout.form"
+    xmlns:c="sap.ui.core">
+    <Dialog id="idUpdateDialog"
+            title="Update Dialog"
+            contentHeight="50%"
+            contentWidth="20%">
+        <content>
+            <f:SimpleForm
+                layout="ColumnLayout"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1">
+                <f:content>
+                    <Label text="Empno"/>
+                    <Input value="{oUpdateModel>/Empno}" />
+                    <Label text="Projod"/>
+                    <Input value="{oUpdateModel>/Projod}" />
+                    <Label text="Assign date"/>
+                    <DatePicker
+                        dateValue="{oUpdateModel>/Assigndate}"
+                        displayFormat="yyyy-MM-dd"
+                    />
+                    <Label text="Role"/>
+                    <Input value="{oUpdateModel>/Role}" />
+                    <Label text="Memo"/>
+                    <Input value="{oUpdateModel>/Memo}" />
+                </f:content>
+            </f:SimpleForm>
+        </content>
+        <buttons>
+            <Button text="수정" press=".onUpdateButton" />
+            <Button text="닫기" press=".onClose" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
+```
+</br>
+</br>
+</br>
+
+### 실습 1에서 수정한 버전 : Filter를 oData Read에서 적용
+- 화면 출력하는 모델을 JSON Model로 바꿈
+- oData에서 Read할 때 필터링
+
+**1) Main.controller.js**
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/Filter",
+    "sap/ui/model/FilterOperator",
+     "sap/ui/model/json/JSONModel",
+     "sap/ui/core/Fragment"
+], (Controller, Filter, FilterOperator, JSONModel, Fragment) => {
+    "use strict";
+
+    return Controller.extend("assignment1.controller.Main", {
+        onInit() {
+            this.oInputModel = new JSONModel();
+            this.oMainModel = new JSONModel();     
+            this.getView().setModel(this.oInputModel, "oInputModel");   
+            this.getView().setModel(this.oMainModel, "oMainModel");   
+            this.oDataModel = this.getOwnerComponent().getModel();  
+            this.oDataModel.read("/EmployeeSet", {
+                success: function(oReturn) {
+                    this.oMainModel.setData(oReturn.results);
+                }.bind(this),
+            })
+        },
+        onSearch: function() {
+            let oInput = this.oInputModel.getData();    // 입력값 (필터)
+            let oFilter = [];
+            let oDateFormat = sap.ui.core.format.DateFormat.getInstance({
+                pattern: "yyyyMMdd",
+                UTC: true
+            });
+            let oStartDate = oDateFormat.parse(oInput.Assigndate);
+            let oEndDate = oDateFormat.parse("20260701");
+            debugger;
+            if (oStartDate) {
+                oFilter.push(
+                    new Filter("Assigndate", FilterOperator.BT, oStartDate, oEndDate)
+                );
+            }
+            if(oInput.Memo) {
+                oFilter.push(new Filter("Memo", FilterOperator.EQ, oInput.Memo));
+            }
+            this.oDataModel.read("/EmployeeSet", {
+                filters: oFilter,
+                success: function(oReturn) {
+                    this.oMainModel.setData(oReturn.results);
+                    debugger;
+                    sap.m.MessageToast.show("필터 성공!");
+                }.bind(this),
+                error: function() { 
+                    sap.m.MessageToast.show("필터 에러!");
+                }
+            })
+            // this.byId("idEmployeeTable").getBinding("items").filter(oFilter);
+        },
+        onCreate: function() {
+            let oModel = new JSONModel();     
+            let oDialog = sap.ui.getCore().byId("idCreateDialog");    
+
+            if(oDialog) {      
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "assignment1.view.fragment.CreateDialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    oDialog.setModel(oModel, "oCreateModel");
+                    oDialog.open();
+                }.bind(this))
+            }
+        },
+        onCreateButton: function() {
+            let oData = sap.ui.getCore().byId("idCreateDialog").getModel("oCreateModel").getData();
+            if (oData.Assigndate) {
+                oData.Assigndate.setMinutes(
+                    oData.Assigndate.getMinutes() - oData.Assigndate.getTimezoneOffset()
+                );
+            }
+            let oBody = {
+                Empno   : oData.Empno,
+                Projod  : oData.Projod,
+                Assigndate  : oData.Assigndate,
+                Role    : oData.Role,
+                Memo    : oData.Memo
+            }
+            this.oDataModel.create("/EmployeeSet", oBody, {
+                success: function() {
+                    sap.m.MessageToast.show("생성 성공!");
+                },
+                error: function() {
+                    sap.m.MessageToast.show("생성 에러!");
+                }
+            })
+            this.oDataModel.read("/EmployeeSet", {
+                success: function(oReturn) {
+                    this.oMainModel.setData(oReturn.results);
+                }.bind(this)
+            })
+        },
+        onClose2: function(oEvent) {
+            oEvent.getSource().getParent().close();
+        },
+        onUpdate: function() {
+            let oData = this.byId("idEmployeeTable").getSelectedItem().getBindingContext("oMainModel").getObject();    // 선택한 열의 데이터 가져오기
+            let oModel = new JSONModel(oData);      // 선택한 열의 데이터로 모델 생성 -> 다이얼로그에서 쓰기 위함
+            let oDialog = sap.ui.getCore().byId("idUpdateDialog");    
+
+            if(oDialog) {      
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "assignment1.view.fragment.UpdateDialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    oDialog.setModel(oModel, "oUpdateModel");
+                    oDialog.open();
+                }.bind(this))
+            }
+        },
+        onUpdateButton: function() {
+            let oModel = sap.ui.getCore().byId("idUpdateDialog").getModel("oUpdateModel");    // 다이얼로그에서 수정한 데이터 값
+            let oData = oModel.getData();
+
+            oData.Assigndate.setMinutes(
+                oData.Assigndate.getMinutes() - oData.Assigndate.getTimezoneOffset()
+            );
+
+            let sPath = this.oDataModel.createKey("/EmployeeSet", {
+                Empno : oData.Empno,
+                Projod : oData.Projod
+            })
+            this.oDataModel.update(sPath, oData, {
+                success: function() {
+                    sap.m.MessageToast.show("수정 성공!");
+                    this.oDataModel.read("/EmployeeSet", {
+                        success: function(oReturn) {
+                            this.oMainModel.setData(oReturn.results);
+                        }.bind(this)
+                    })
+                }.bind(this),
+                error: function() {
+                    sap.m.MessageToast.show("수정 에러!");
+                }
+            })
+            this.oDataModel.read("/EmployeeSet", {
+                success: function(oReturn) {
+                    this.oMainModel.setData(oReturn.results);
+                }.bind(this)
+            })
+        },
+        onClose: function(oEvent) {
+            oEvent.getSource().getParent().close();
+        },
+        onDelete: function() {
+            let oData = this.byId("idEmployeeTable").getSelectedItem().getBindingContext("oMainModel").getObject(); 
+            let sPath = this.oDataModel.createKey("/EmployeeSet", {
+                Empno: oData.Empno,
+                Projod : oData.Projod
+            });
+            this.oDataModel.remove(sPath, {
+                success: function () {
+                    sap.m.MessageToast.show("삭제 성공!");
+                    this.oDataModel.read("/EmployeeSet", {
+                        success: function(oReturn) {
+                            this.oMainModel.setData(oReturn.results);
+                        }.bind(this)
+                    })
+                }.bind(this)
+            });
+        }
+    });
+});
+```
+</br>
+</br>
+
+**2) Main.view.xml**
+```html
+<mvc:View controllerName="assignment1.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:f="sap.f"
+    xmlns:layout="sap.ui.layout"
+    xmlns:fb="sap.ui.comp.filterbar"
+    xmlns="sap.m">
+    <f:DynamicPage id="dynamicPageId" headerExpanded="true" toggleHeaderOnTitleClick="false">
+        <!-- DynamicPage Title -->
+        <f:title>
+            <f:DynamicPageTitle>
+                <f:heading>
+                    <Title text="Header Title"/>
+                </f:heading>
+                <!-- <f:content>
+                    <OverflowToolbar>
+                    </OverflowToolbar>
+                </f:content> -->
+            </f:DynamicPageTitle>
+        </f:title>
+        <!-- DynamicPage Header -->
+        <f:header>
+            <f:DynamicPageHeader pinnable="false">
+                <fb:FilterBar id="filterbar" search="onSearch" persistencyKey="myPersKey" useToolbar="false" showGoOnFB="true" showFilterConfiguration="false">
+                    <fb:filterGroupItems>
+                        <fb:FilterGroupItem name="Assigndate" groupName="Group1" label="Assign Date" visibleInFilterBar="true">
+                            <fb:control>
+                                <DatePicker value="{oInputModel>/Assigndate}" />
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <fb:FilterGroupItem name="Memo" groupName="Group1" label="Memo" visibleInFilterBar="true">
+                            <fb:control>
+                                <Input value="{oInputModel>/Memo}"/>
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <!-- <fb:FilterGroupItem name="Search" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <Button text="검색버튼" press="onPress" />
+                            </fb:control>
+                        </fb:FilterGroupItem> -->
+                    </fb:filterGroupItems>
+                </fb:FilterBar>
+            </f:DynamicPageHeader>
+        </f:header>
+        <f:content>
+            <Table id="idEmployeeTable"
+                    sticky="HeaderToolbar,ColumnHeaders"
+                    inset="false"
+                    items="{oMainModel>/}"
+                    selectionChange="onSelectionChange"
+                    class="sapFDynamicPageAlignContent"
+                    mode="SingleSelectLeft"
+                    width="auto">
+                <headerToolbar>
+                    <Toolbar>
+                        <Title text="Products" level="H2"/>
+                        <Button text="생성" press="onCreate" type="Emphasized"/>
+                        <Button text="수정" press="onUpdate" type="Emphasized"/>
+                        <Button text="삭제" press="onDelete" type="Emphasized"/>
+                    </Toolbar>
+                </headerToolbar>
+                <columns>
+                    <Column width="12em">
+                        <Text text="Empno" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Projod" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Assigndate" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Role" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Memo" />
+                    </Column>
+                </columns>
+                <items>
+                    <ColumnListItem>
+                        <cells>
+                            <Text text="{oMainModel>Empno}" />
+                            <Text text="{oMainModel>Projod}" />
+                            <Text text="{
+                                path: 'oMainModel>Assigndate',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
+                            <Text text="{oMainModel>Role}" />
+                            <Text text="{oMainModel>Memo}" />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+        </f:content>
+    </f:DynamicPage>
+</mvc:View>
+```
+</br>
+</br>
+
+
 
